build(java): baseline da toolchain 21 -> 25 (D-BASELINE, decisão da mantenedora)
pom release + setup-java (ci/codeql/release/benchmark/android) + Temurin
embutido do package.sh + README (canonico e PT) sobem 21->25. Destrava
unnamed patterns _ (JEP 443, finalizado no 22) p/ codemod dos findings
local-variable-is-never-read (x82) e parte de unused-parameter (x81) da
aba CodeQL. NAO muda o alvo de runtime de programa Kof: JvmBackend segue
emitindo V21 (bytecode do usuario roda em JVM 21+, regra 6 congelamento)
e o template Android segue release=21 (alvo do APK). JvmRuntime guarda
--release 21 --enable-preview mantida (so vale em <22). Registro em
DECISIONS.md D-BASELINE. Prova: mvn -pl kof-compiler -am compile verde
com 'javac [debug release 25]'.